# hsm.cpp

./: .gitignore  CMakeLists.txt  README.md  hsm.dsl.md  test.gaps.md
bench/: CMakeLists.txt  README.md  hsm_bench.cpp  traffic_light_bench.cpp
bench/compile_time/: ct_hsm_large.cpp  ct_hsm_medium.cpp  ct_hsm_small.cpp  ct_sml_large.cpp  ct_sml_medium.cpp  ct_sml_small.cpp  run.sh
cmake/: DoctestCMakeLists.txt
docs/: hsm.md  hsm_freertos.md  uml.md
examples/: CMakeLists.txt  hsm_bench.cpp  hsm_example.cpp  hsm_footprint.cpp
include/hsm/: group.hpp  hsm.hpp  kind.hpp
include/hsm/detail/: assert.hpp  behaviors.hpp  expressions.hpp  extract_events.hpp  fixed_string.hpp  hash.hpp  hash_table.hpp  meta_model.hpp  normalize.hpp  path.hpp  structural_tuple.hpp  type_list.hpp
tests/: CMakeLists.txt  hsm_activity_test.cpp  hsm_attribute_test.cpp  hsm_benchmark.cpp  hsm_call_event_test.cpp  hsm_choice_test.cpp  hsm_clock_test.cpp  hsm_completion_event_test.cpp  hsm_constexpr_test.cpp  hsm_constructor_test.cpp  hsm_custom_context_test.cpp  hsm_defer_test.cpp  hsm_depth_test.cpp  hsm_dispatch_return_source_test.cpp  hsm_dispatch_return_test.cpp  hsm_dispatch_test.cpp  hsm_entry_test.cpp  hsm_event_attributes_test.cpp  hsm_exit_test.cpp  hsm_external_transition_test.cpp  hsm_final_test.cpp  hsm_fuzz_test.cpp  hsm_group_test.cpp  hsm_history_test.cpp  hsm_initial_test.cpp  hsm_instance_context_test.cpp  hsm_internal_transition_inheritance_test.cpp  hsm_internal_utils_test.cpp  hsm_local_transition_test.cpp  hsm_manual_drive_test.cpp  hsm_meta_model_test.cpp  hsm_on_interval_event_test.cpp  hsm_on_set_event_test.cpp  hsm_operation_test.cpp  hsm_parent_context_test.cpp  hsm_pascal_case_api_test.cpp  hsm_path_test.cpp  hsm_process_test.cpp  hsm_queue_nested_test.cpp  hsm_refactor_test.cpp  (+11 more)
tests/compile_fail/: invalid_guard_type.cpp  invalid_target_path.cpp  slash_in_state_name.cpp  unknown_event_dispatch.cpp  zero_queue_capacity.cpp
tests/reported/: issue_000_placeholder_test.cpp
